# auditd-operator

./: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  justfile  pyproject.toml
.github/workflows/: check.yaml  release_charm_artifacts.yaml
src/: charm.py  literals.py  utils.py  workloads.py
src/audit_rules/: passwd.rules  shadow.rules  sudoers.rules
src/auditd_templates/: auditd.conf.j2
src/loki_alert_rules/: audit.yaml
tests/unit/: test_charm.py  test_utils.py  test_workloads.py
