[project]
name = "auditd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "cosl>=0.0.50",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]
charmlibs = [
    "opentelemetry-api>=1.36.0",
    "ops>=3.1.0",
]

#
# Tools configuration
#

[tool.ruff]
line-length = 99
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    "report",
    "lib",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
docstring-code-format = false
skip-magic-trailing-comma = false
docstring-code-line-length = "dynamic"


[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "C9",  # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PL",  # pylint
    "W",   # pycodestyle warnings
]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]
fixable = ["ALL"]
unfixable = []
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.pylint]
max-args = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage,./tests/unit/report"
ignore-words-list = "assertIn"

[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".eggs", ".git", ".tox", ".venv", ".build", "build", "report", "tests", "lib"]
